--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ buildscript {
 
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.novoda:bintray-release:0.8.1'
     }
 }
 
@@ -14,11 +16,14 @@ version '0.0.1'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'com.novoda.bintray-release'
+
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -32,3 +37,16 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+
+
+publish {
+    groupId = 'com.github.getcoderio'
+    artifactId = 'GetCountry'
+    publishVersion = '0.0.1'
+    desc = 'The library that transforms String location into Country/Region/City names'
+    licences = ['MIT']
+    website = 'https://github.com/getcoderio/getCountry'
+    userOrg = "getcoder"
+}
+
