--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ version '0.0.1'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'jacoco'
 
 
 sourceCompatibility = 1.8
@@ -48,5 +49,12 @@ publish {
     licences = ['MIT']
     website = 'https://github.com/getcoderio/getCountry'
     userOrg = "getcoderio"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
 }
 
