--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'jacoco'
+apply plugin: 'application'
+
+mainClassName = 'getcountry.Main'
 
 
 sourceCompatibility = 1.8
@@ -32,6 +35,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.google.guava:guava:23.5-jre'
+    compile 'org.springframework:spring-context:5.0.6.RELEASE'
 }
 
 compileKotlin {
@@ -46,7 +50,7 @@ compileTestKotlin {
 publish {
     groupId = 'com.github.getcoderio'
     artifactId = 'GetCountry'
-    publishVersion = '0.1.3'
+    publishVersion = '0.1.4'
     desc = 'The library that transforms String location into Country/Region/City names'
     licences = ['MIT']
     website = 'https://github.com/getcoderio/getCountry'
