--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'com.google.code.gson:gson:2.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.google.guava:guava:23.5-jre'
     compile 'org.springframework:spring-context:5.0.6.RELEASE'
 }
 
@@ -51,4 +52,3 @@ publish {
     website = 'https://github.com/getcoderio/getCountry'
     userOrg = "getcoderio"
 }
-
