--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,25 @@ buildscript {
     }
 }
 
-//group 'com.github.getcoderio'
-//version '0.0.1'
+configurations {
+    detekt
+}
+
+task detekt(type: JavaExec) {
+    main = "io.gitlab.arturbosch.detekt.cli.Main"
+    classpath = configurations.detekt
+    def input = "$projectDir"
+    def config = "$projectDir/detekt.yml"
+    def filters = ".*/build/.*,.*/resources/.*"
+    def rulesets = ""
+    def params = [ '-i', input]
+    args(params)
+}
+
+dependencies {
+    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC7-3'
+}
+
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
